# smith-core

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.yaml  justfile  package-lock.json  package.json
agent/agentd/: .gitignore  Cargo.toml  Dockerfile  ISOLATION_TESTING.md  ISOLATION_TESTS_REFACTORING_SUMMARY.md  POLICY_ENFORCEMENT_DEMO.md  README.md  build.rs  test_policy_bundle.sh
agent/agentd/config/: agentd.toml
agent/agentd/crates/smith-attestation/: Cargo.toml
agent/agentd/crates/smith-attestation/src/: capability.rs  cosign.rs  errors.rs  lib.rs  provenance.rs  signatures.rs  verification.rs
agent/agentd/crates/smith-bus/: Cargo.toml
agent/agentd/crates/smith-bus/src/: consumer.rs  consumer_tests.rs  lag_monitor.rs  lag_monitor_tests.rs  lib.rs  lib_tests.rs  publisher.rs  publisher_tests.rs  sharding.rs  smith_bus_tests.rs  streams.rs  streams_tests.rs  subjects.rs
agent/agentd/crates/smith-bus/tests/: integration_tests.rs
agent/agentd/crates/smith-config/: Cargo.toml
agent/agentd/crates/smith-config/src/: app.rs  behavior.rs  behavior_tests.rs  behavior_tests_old.rs  behavior_tests_old2.rs  config_builder_tests.rs  config_methods_tests.rs  diff.rs  diff_tests.rs  diff_tests_broken.rs  diff_tests_old.rs  env_and_io_tests.rs  executor.rs  http.rs  lib.rs  manifest.rs  mcp.rs  nats.rs  nats_adapter.rs  observability.rs  shell.rs  simple_coverage_tests.rs
agent/agentd/crates/smith-jailer/: Cargo.toml
agent/agentd/crates/smith-jailer/src/: cgroups.rs  landlock.rs  landlock_security_tests.rs  lib.rs  namespaces.rs  seccomp.rs  seccomp_security_tests.rs
agent/agentd/crates/smith-logging/: Cargo.toml
agent/agentd/crates/smith-logging/examples/: basic_usage.rs
agent/agentd/crates/smith-logging/src/: error.rs  lib.rs  metrics.rs
agent/agentd/crates/smith-logging/tests/: integration_tests.rs
agent/agentd/crates/smith-protocol/: Cargo.toml
agent/agentd/crates/smith-protocol/proto/: smith_v1.proto
agent/agentd/crates/smith-protocol/src/: benchmark.rs  client.rs  idempotency.rs  lib.rs  negotiation.rs  policy.rs  (+3 more)
agent/agentd/examples/: test_bind_mount.rs  test_isolation_demo.rs
agent/agentd/infra/: README.md
agent/agentd/infra/compose/: .env.example  docker-compose.dev.yaml  docker-compose.monitoring.yaml  docker-compose.yaml
agent/agentd/infra/envoy/: envoy-dev.yaml  envoy-egress.yaml  envoy.yaml
agent/agentd/infra/loki/: loki.yml
agent/agentd/infra/opa/: opa.yaml
agent/agentd/infra/prometheus/: prometheus.yml
agent/agentd/infra/promtail/: promtail.yml
agent/agentd/migrations/: 001_initial.sql
agent/agentd/npm/agentd/: package.json
agent/agentd/npm/agentd-darwin-arm64/: package.json
agent/agentd/npm/agentd-darwin-x64/: package.json
agent/agentd/npm/agentd-linux-arm64/: package.json
agent/agentd/npm/agentd-linux-x64/: package.json
agent/agentd/policy/: authz_router.rego  base.rego  egress.rego  filesystem.rego  gateway.rego  network.rego  paranoid.rego  permissive.rego  sandbox.rego  strict.rego
agent/agentd/proto/: agentd.proto
agent/agentd/scripts/: build-policy-bundle.sh  generate-egress-secrets.sh  npm-publish.sh  npm-version-sync.sh  setup-firecracker.sh
agent/agentd/src/: admission_pipeline.rs  attestation.rs  attestation_utils.rs  audit.rs  bootstrap.rs  capability.rs  error_handling_tests.rs  health.rs  idempotency.rs  intent.rs  lib.rs  main.rs  metrics.rs  nats.rs  nats_testing.rs  policy.rs  runtime.rs  schema.rs  security.rs  security_validation_tests.rs  test_policy_enforcement.rs  trace.rs  util.rs  worker.rs
agent/agentd/src/adapters/: mod.rs
agent/agentd/src/attestation/: mod.rs  policy_loader.rs  provenance.rs  types.rs  verification.rs
agent/agentd/src/auth/: allow_all.rs  api_key.rs  jwt.rs  mod.rs  peer_creds.rs  signature.rs
agent/agentd/src/capabilities/: mod.rs
agent/agentd/src/commands/: check_config.rs  cli.rs  daemon.rs  mod.rs  self_test.rs
agent/agentd/src/config/: agentd.rs  mod.rs
agent/agentd/src/core/: auth.rs  ingest.rs  intent.rs  isolation.rs  mod.rs  output.rs  sandbox.rs
agent/agentd/src/desktop/: mod.rs  types.rs
agent/agentd/src/isolation/: container.rs  firecracker.rs  host_direct.rs  linux.rs  mod.rs
agent/agentd/src/isolation_tests/: cgroups_tests.rs  common.rs  landlock_tests.rs  mod.rs  seccomp_tests.rs
agent/agentd/src/planner/: executor_adapter.rs  guard.rs  menu_system.rs  mod.rs  mod_tests.rs  oracle.rs  stall_detection.rs  state_machine.rs  telemetry.rs
agent/agentd/src/runners/: analysis_performance.rs  analysis_system.rs  capability_tests.rs  fs_read.rs  http_fetch.rs  implementation_execute.rs  mod.rs  shell_exec.rs  test_simulation.rs  validation_test.rs
agent/agentd/src/vm/: mod.rs
agent/agentd/systemd/: agentd.service
agent/agentd/tests/: capability_integration_tests.rs  comprehensive_security_tests.rs  executor_adapter_tests.rs  isolation_integration.rs  micro_vm_tests.rs  mode_escape_regression.rs  oracle_tests.rs  phase8_integration_tests.rs  security_error_handling_tests.rs  security_integration_tests.rs  security_penetration_tests.rs  simple_planner_test.rs  test_config.rs
agent/agentd/tools/planner-demo/: Cargo.toml  README.md
service/admission/: Cargo.toml  REFACTORING_SUMMARY.md  demo-behavior-packs.md  test-behavior-packs.sh
service/admission/config/behavior/: eng-alpha.yaml  prod-safe.yaml
service/admission/proptest-regressions/: fuzzer.txt
service/admission/src/: config.rs  lib.rs  main.rs  metrics.rs  policy_store.rs  service.rs
service/smith-chat/: Cargo.toml  README.md
service/smith-chat/examples/: mattermost_demo.rs
service/smith-chat/src/: allowlist.rs  bridge.rs  config.rs  daemon.rs  debounce.rs  error.rs  exporter.rs  format.rs  gateway_common.rs  identity.rs  lib.rs  message.rs  pairing_store.rs  session_key.rs  webhook.rs
service/smith-chat/src/adapter/: discord.rs  google_chat.rs  imessage.rs  matrix.rs  mattermost.rs  mod.rs  signal.rs  slack.rs  teams.rs  telegram.rs  whatsapp.rs
(+151 files in other folders)
