[package]
name = "smith-admission"
version.workspace = true
edition.workspace = true
description = "Smith Policy Sync Service - PostgreSQL to OPA policy synchronization"
authors.workspace = true
license.workspace = true

[[bin]]
name = "smith-admission"
path = "src/main.rs"

[dependencies]
# Core
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
clap = { workspace = true }

# PostgreSQL (policy store)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"

# HTTP client (OPA management API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async
async-trait = { workspace = true }

# Metrics
prometheus = "0.14"
lazy_static = "1.4"

# HTTP server (metrics/health endpoint)
hyper = { version = "0.14", features = ["full"] }
