[package]
name = "smith-attestation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Supply chain attestation and cryptographic signing"

[[bin]]
name = "generate-provenance"
path = "src/bin/generate-provenance.rs"

[[bin]]
name = "sign-policy-bundle"
path = "src/bin/sign-policy-bundle.rs"

[features]
default = ["slsa"]
cosign = ["sigstore"]
slsa = []

[dependencies]
# Core dependencies
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }

# Cryptographic dependencies
sha2 = { workspace = true }
blake2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.21"

# Supply chain security
sigstore = { version = "0.12", optional = true, features = ["full", "native-tls", "cached-client"] }

# Configuration and filesystem
dirs = "5.0"
tempfile = { workspace = true }

# CLI dependencies for binaries
clap = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
