[package]
name = "smith-bus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NATS JetStream helpers for intent execution"
keywords = ["nats", "jetstream", "messaging", "async"]
categories = ["network-programming", "development-tools"]

[dependencies]
# Core async and error handling
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# NATS client
async-nats = { workspace = true }

# Time utilities
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
time = "0.3"

# Subject validation
regex = "1.10"
sha2 = { workspace = true }

# Backoff and retry
tokio-retry = { workspace = true }

# CLI tools
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"

[dev-dependencies]
tempfile = { workspace = true }
test-log = "0.2"
tokio-test = "0.4"

[features]
default = []
nats-integration = []

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = ["nats-integration"]
