[package]
name = "smith-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified configuration management for agent services"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
serde_json = { workspace = true }
serde_yaml = "0.9"
url = "2.4"
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
regex = "1.10"
once_cell = { workspace = true }

# Optional dependencies for different config sources
figment = { version = "0.10", optional = true, features = ["env", "toml", "json"] }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["env"]
env = ["figment"]
