[package]
name = "smith-logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Structured logging infrastructure with NATS integration"
keywords = ["logging", "tracing", "nats", "structured", "observability"]
categories = ["development-tools", "network-programming"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "chrono", "registry"] }

# Time and UUID
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }

# NATS client
async-nats = { workspace = true }

# Rate limiting and buffering
governor = "0.6"
tokio-util = { version = "0.7", features = ["time"] }

# Internal dependencies
smith-config = { path = "../smith-config", version = "0.1.0" }
smith-bus = { path = "../smith-bus", version = "0.1.0" }

# Additional utilities
hostname = "0.4"
once_cell = { workspace = true }

[features]
default = []
console_fallback = []
performance_monitoring = []

[dev-dependencies]
tempfile = { workspace = true }
test-log = "0.2"
criterion = { workspace = true }
